src/components/IconLibrary/IconLibrary.module.scss
.filter-row {
  display: flex;
  align-items: flex-end;
  flex-direction: column;
  @include carbon--breakpoint('md') {
    flex-direction: row;
  }
}

.filter-row :global(.bx--search) {
  width: 100%;
  @include carbon--breakpoint('md') {
    width: 60%;
    margin-right: 80px;
  }
}

.filter-row :global(.bx--search .bx--search-input) {
  height: 40px;
}

.filter-row :global(.bx--dropdown__wrapper) {
  flex-grow: 1;
  width: 100%;
  margin-top: $spacing-05;
  @include carbon--breakpoint('md') {
    margin-top: 0;
    width: auto;
  }
}

.icon-category .category-title {
  margin: 0;
  margin-left: 1rem;
  margin-top: 80px;
}

.icon-category .subcategory-title {
  margin: 0;
  margin-top: 48px;
  margin-left: 1rem;
}

// i.e. fallback
.icon-grid {
  display: flex;
  flex-wrap: wrap;
}

.icon-grid {
  margin-top: $spacing-05;
  display: grid;
  width: 100%;
  background-color: $ui-03;
  grid-template-columns: repeat(2, 1fr);
  overflow: hidden;

  @include carbon--breakpoint('md') {
    grid-template-columns: repeat(4, 1fr);
  }

  @include carbon--breakpoint('lg') {
    grid-template-columns: repeat(6, 1fr);
  }
}

.icon-grid::after {
  content: '';
  width: 600%;
  background-color: $ui-01;
}

$icon-card-border: 1px solid $ui-03;

.icon-card {
  height: 0;
  overflow: hidden;
  padding-top: 100%;
  background-color: $ui-background;
  position: relative;
  border-left: $icon-card-border;
  border-top: $icon-card-border;
  &:first-child {
    border-left: none;
  }

  // first row
  &:nth-child(-n + 2) {
    border-top: none;
  }

  // every other card
  &:nth-child(odd) {
    border-left: none;
  }
}

@include carbon--breakpoint('md') {
  .icon-card {
    // reset 2 column borders
    &:nth-child(-n + 2) {
      border-top: $icon-card-border;
    }
    &:nth-child(odd) {
      border-left: $icon-card-border;
    }

    // first row of 4
    &:nth-child(-n + 4) {
      border-top: none;
    }
    // every 4th card (starting with 5th)
    &:nth-child(4n + 1) {
      border-left: none;
    }
  }
}

@include carbon--breakpoint('lg') {
  .icon-card {
    // reset 4 column borders
    &:nth-child(-n + 4) {
      border-top: $icon-card-border;
    }
    &:nth-child(4n + 1) {
      border-left: $icon-card-border;
    }

    // first row of 6
    &:nth-child(-n + 6) {
      border-top: none;
    }

    // every 6th card (starting with 7th)
    &:nth-child(6n + 1) {
      border-left: none;
    }
  }
}

.icon-card-inside {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.flex-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.icon-card-label {
  @include carbon--type-style('label-01');
  position: absolute;
  top: $spacing-04;
  left: $spacing-05;
  display: inline-block;

  // text overflow
  display: block;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: calc(100% - #{$spacing-07});
}

